Update CoverageDriverImpl.java
Change grammer in comments